tests/fail/parsingMM0/int cannot be prefixed with zeros.mm0
-- number ::= 0 | [1-9][0-9]*
prefix p : $+$ prec 01;